--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "IAM-Frontend": {
+    "IAM": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/IAM-Frontend",
+            "outputPath": "dist/IAM",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -24,7 +24,11 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/primeicons/primeicons.css",
+              "node_modules/primeng/resources/themes/saga-blue/theme.css",
+              "node_modules/primeng/resources/primeng.min.css",
+              "node_modules/primeflex/primeflex.css"
             ],
             "scripts": []
           },
@@ -62,18 +66,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "IAM-Frontend:build"
+            "browserTarget": "IAM:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "IAM-Frontend:build:production"
+              "browserTarget": "IAM:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "IAM-Frontend:build"
+            "browserTarget": "IAM:build"
           }
         },
         "test": {
@@ -110,15 +114,15 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "IAM-Frontend:serve"
+            "devServerTarget": "IAM:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "IAM-Frontend:serve:production"
+              "devServerTarget": "IAM:serve:production"
             }
           }
         }
       }
     }},
-  "defaultProject": "IAM-Frontend"
+  "defaultProject": "IAM"
 }
