--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@angular/router": "~10.0.6",
     "primeflex": "^2.0.0",
     "primeicons": "^4.1.0",
-    "primeng": "^12.0.0-rc.1",
+    "primeng": "^11.4.0",
     "roboto-fontface": "^0.10.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
